--- a/README
+++ b/README
@@ -17,9 +17,9 @@ An example session goes like this:
 
 ## How should I install it?
 
-You need a new Git (v 1.6.0 or higher). As 1.6.0 is not released at this time, I included a patch that you can apply to the git source to get the required functionality. Using Git from the 'master' branch or 'next' will also work.
+You need a new Git (v 1.6.0-rc0 or higher). As 1.6.0 is not released at this time, I included a patch that you can apply to the git source to get the required functionality. Using Git from the 'master' branch or 'next' will also work.
 
-Furthermore, you need some changes to Bazaar fastimport plugin. I created my own branch at launchpad, use the plugin from there: https://code.launchpad.net/~frim/bzr-fastimport/export-fixes
+Furthermore, you need the Bazaar fastimport plugin. It can be found at https://launchpad.net/bzr-fastimport.
 
 Finally, you need to install the git-bzr script, which is written in Ruby, somewhere. You will need to edit it a bit to make it work with your paths, as it is really unpolished and probably uses absolute pathnames.
 
